# citadel-rag

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  rag.py
app/core/: __init__.py  config.py  database.py
app/models/: __init__.py  base.py  orm.py  schemas.py
app/repositories/: __init__.py  rag.py
app/schemas/: __init__.py  rag.py
app/services/: __init__.py  chunking.py  ingestion.py  llm.py  rag_pipeline.py  vector.py
migrations/: env.py
migrations/versions/: 298e322c750b_create_documents_and_chunks.py  5b5ec3d57d50_initial_migration_note_table.py  6adc7a7b9526_add_vector_extension_and_embedding_.py  9486e5077e65_add_hnsw_index.py  a1b2c3d4e5f6_add_updated_at_column.py
scripts/: backfill_embeddings.py  evaluate_rag.py  seed_eval_docs.py
src/atlas_template/: main.py
src/atlas_template/api/v1/: notes.py
src/atlas_template/core/: config.py  database.py  logging.py
src/atlas_template/models/: __init__.py  base.py  note.py
src/atlas_template/repositories/: __init__.py  base.py  notes.py
src/atlas_template/schemas/: notes.py
src/atlas_template/services/: ai.py  embeddings.py
tests/: conftest.py  test_chunking.py  test_ingestion.py
tests/data/: golden_dataset.json
tests/data/sample_docs/: deep_learning.md  ml_algorithms.md  ml_fundamentals.md  ml_practical.md
tests/integration/: test_async_embedding.py  test_live_api.py  test_live_search.py  test_rag_flow.py
tests/unit/: test_ai_service.py  test_main.py
ui/: Dockerfile  main.py  requirements.txt
