# ==============================================================================
# CITADEL RAG Pipeline - Project Configuration
# Python packaging, linting, type checking, and test configuration
# ==============================================================================

[project]
name = "atlas-template"
version = "0.1.0"
description = "Production-ready FastAPI template"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "alembic>=1.13.0",
    "openai>=1.0.0",
    "pgvector>=0.2.0",
    "pymupdf>=1.24.0",
    "langchain-text-splitters>=0.2.0",
    "sentence-transformers>=3.0.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "httpx>=0.26.0",
    "types-redis",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atlas_template"]

# --- Ruff Configuration (linter + formatter) ---

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "."]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]  # Errors, Warnings, pyFlakes, Isort, Bugbear, pyUpgrade
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["atlas_template", "app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.flake8-bugbear]
# Prevent false positives for FastAPI dependency injection
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Security"
]

# --- Mypy Configuration (type checking) ---

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true  # Third-party libs without stubs
disallow_untyped_defs = false
disallow_incomplete_defs = false
exclude = ["tests/"]
mypy_path = "src"

# --- Pytest Configuration ---

[tool.pytest.ini_options]
addopts = "-v --cov=src --cov=app --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = [
    "live: marks tests as requiring a running docker stack",
]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
